tests/expectations/compiler/array/nested_array_sum_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372007]: Expected one type from `array`, but got `u32`
    --> compiler-test:9:29
     |
   9 |                 sum = sum + a[i][j];
     |                             ^^^^
Error [ETYC0372003]: Expected type `u32` but type `no type` was found
    --> compiler-test:9:23
     |
   9 |                 sum = sum + a[i][j];
     |                       ^^^^^^^^^^^^^
"""]
